# Cargo workspace root. Phase 0 introduced the `loro-spike` crate
# under `crates/loro-spike` as an isolated, throwaway evaluation of the Loro
# CRDT library (see `docs/session-log/2026-sessions-401-800.md` Session 698); Phase 1 ported the
# necessary engine code into `src-tauri/src/loro/`.  The spike was archived
# in Phase 2 day-8 (see `docs/session-log/2026-sessions-401-800.md` Session 698): the directory is
# gone, the spike's notes + final report + source are preserved at the
# annotated git tag `pend-09/spike-archive` (commit `3e8a1267`).
[workspace]
# #645 — `diagnostics` holds the two read-only DB inspection bins
# (`op_log_histogram`, `audit_cross_space_refs`) carved out of this app
# crate so `tauri-bundler` no longer scans them as app `[[bin]]` targets.
members = [".", "agaric-core", "agaric-store", "agaric-engine", "agaric-sync", "agaric-observability", "diagnostics"]

[package]
name = "agaric"
version = "0.9.1"
edition = "2024"
# #640: MSRV documentation — keep in lockstep with rust-toolchain.toml and
# the `toolchain:` inputs in .github/workflows/{ci,release,_validate}.yml.
# cargo refuses (resolver) / warns (build) when a consumer's toolchain is
# older than this, instead of failing with inscrutable syntax errors.
rust-version = "1.95.0"
license = "GPL-3.0-or-later"
publish = false
# Two binaries in this crate — `agaric` (the Tauri app, implicit via
# src/main.rs) and `agaric-mcp` (the MCP stub, explicit [[bin]] entry
# further down). `cargo tauri build` needs an unambiguous main-binary
# pointer when multiple targets exist.
default-run = "agaric"

# Cargo-machete allowlist —.
#
# Each entry must carry a reachability rationale so a future audit can decide
# whether to keep, remove, or replace. cargo-machete flags these because their
# `use` statements live inside feature-gated modules or behind conditional
# compilation, so the static analyzer can't see the call site under the
# default feature set — but the runtime path is active and the crate ships
# in the final binary.
[package.metadata.cargo-machete]
ignored = [
    # #2621 Sync-D: the sync-only deps (mdns-sd, qrcode, rcgen, tokio-tungstenite,
    # tokio-rustls, if-addrs, x509-parser, jni, ndk-context) moved to
    # `agaric-sync/Cargo.toml` along with the code that uses them. What remains
    # here is used by app production code (or shared TLS/crypto) but sits behind
    # conditional compilation the static analyzer can't see under the default
    # feature set.
    "rand",         # crypto-quality random used outside the sync cluster; also transitive.
    "rustls",       # pure-Rust TLS stack. Direct dep + transitive via reqwest 0.13, hyper-rustls, tauri-plugin-updater.
    "sha2",         # SHA-256 hashing used outside the sync cluster; also transitive.
    "futures-util", # Stream / Sink combinators. Direct dep + transitive via futures, sqlx-core, reqwest, hyper-util, gio, glib.
]

[lints.rust]
unsafe_code = "deny"
# `fuzzing` is set by cargo-fuzz when the src-tauri/fuzz crate compiles this lib
# as a path dependency. `run()` (the tauri app entry, which expands
# `generate_context!`) is gated `#[cfg(not(fuzzing))]` so the parser-only fuzz
# targets never compile the GUI/ACL codegen (#2123). Declare the cfg so the
# normal `-D warnings` build doesn't reject it as unexpected.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
fallible_impl_from = "deny"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
large_futures = "warn"
default_trait_access = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
# Leftover-debug / unfinished-code guards (zero current hits). The pre-push and
# CI clippy run with `-D warnings`, so these block at push. `print_stdout`/
# `print_stderr` are intentionally NOT enabled — the `agaric-mcp` bin speaks the
# MCP protocol over stdio and the CLI prints to the console.
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

# Auto-fixable pedantic lints (every violation is machine-applicable via
# `cargo clippy --fix`). Enabled as warn; pre-push/CI run `-D warnings`.
uninlined_format_args = "warn"
semicolon_if_nothing_returned = "warn"
map_unwrap_or = "warn"
cast_lossless = "warn"
manual_string_new = "warn"
single_match_else = "warn"
needless_raw_string_hashes = "warn"
range_plus_one = "warn"
manual_assert = "warn"
unnested_or_patterns = "warn"
stable_sort_primitive = "warn"
single_char_pattern = "warn"
implicit_clone = "warn"
bool_to_int_with_if = "warn"
ignored_unit_patterns = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"

[features]
# Opt-in feature for end-to-end smoke tests that require the
# `agaric-mcp` binary to be built first. CI enables this; local
# `cargo nextest run` does not. Local devs can still run the test
# manually: `cargo build --bin agaric-mcp && cargo nextest run --features ci-smoke -E 'test(stub_binary)'`.
ci-smoke = []
# #645 — the `diagnostics` feature (formerly built the
# `audit_cross_space_refs` / `op_log_histogram` bins) is retired: those
# bins moved to the `agaric-diagnostics` workspace member, so the feature
# gated nothing in this crate. Run the tools with
# `cargo run -p agaric-diagnostics --bin <name>`.
# `rmcp` is a hard dep (was previously gated behind the
# `mcp_rmcp_spike` feature during the M1/M2 spike). The adapter in
# `mcp/rmcp_spike.rs` is the production tools/call dispatcher.
# Phase 3 day-9 — `loro-shadow` feature flag retired. The
# Loro CRDT engine is now the only path: `loro` and `xxhash-rust` are
# hard deps below (no `optional = true`), and `src/loro/` compiles
# unconditionally.  Removing the gate landed in commit `f7c21782`; see
# `docs/session-log/2026-sessions-401-800.md` Session 699 Phase 3 day 9.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Foundation crate (#2621 layered-workspace split). Holds the pure-leaf
# `error`/`word_diff`/`sql_utils`/`text_utils` modules; re-exported below
# (`pub use agaric_core::…` in lib.rs) so `crate::error::…` paths are
# unchanged. Lib target is `agaric_core`.
agaric-core = { path = "agaric-core", version = "0.1.0" }
# agaric-store — persistence + read/query layer (#2621). Path dep pinned with a
# version so cargo-deny's wildcard ban is satisfied. Wave S1 exposes the
# `cancellation` module, re-exported below via `crate::cancellation`.
agaric-store = { path = "agaric-store", version = "0.1.0" }
# agaric-engine — CRDT / document-domain layer (#2621). Path dep pinned with a
# version so cargo-deny's wildcard ban is satisfied. Wave E0 exposes the
# query-free `bibliography` leaf, re-exported below via `crate::bibliography`.
agaric-engine = { path = "agaric-engine", version = "0.1.0" }
agaric-sync = { path = "agaric-sync", version = "0.1.0" }
# agaric-observability — OpenTelemetry trace/log/metric pipelines (#2878). The
# `observability` module + its heavy OTel dep tree moved into this leaf crate;
# re-exported below via `pub use agaric_observability as observability;` so
# `crate::observability::…` paths are unchanged. The app wires its two
# materializer counter readers in through `observability::MaterializerCounters`
# at `init` time (the crate depends only on `agaric-core`, never up on the app).
agaric-observability = { path = "agaric-observability", version = "0.1.0" }

# `tracing` feature (#2110 M3): makes Tauri's async `#[command]` wrapper
# instrument each command future with an `ipc::request::run` span created at
# dispatch time. Combined with the trace-context-extracting invoke wrapper in
# `lib.rs`, that span is born a child of the frontend's `traceparent`, so every
# backend command + subsystem span nests under the originating frontend
# interaction (one trace across the IPC boundary). The feature only adds
# debug/trace-level spans, captured solely by the OTel layer (off by default).
tauri = { version = "2", features = ["image-png", "tracing"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
# Cross-platform platform/version/arch/locale/hostname API.
# Used by the bug-report metadata collector (see commands/bug_report.rs).
# Works on desktop and mobile.  Part of the Tauri plugin coupled stack.
tauri-plugin-os = "2"
# Native OS notifications for due / scheduled tasks. The
# `notify_task` command (see commands/notifier.rs) fires a desktop /
# mobile notification through the plugin's builder.  Works on desktop
# and mobile (Android 13+ needs the `POST_NOTIFICATIONS` runtime grant,
# requested frontend-side via the plugin's permission API).  Part of the
# Tauri plugin coupled stack per AGENTS.md §"Coupled Dependency Updates"
# — move in lockstep with the rest of the tauri-plugin-* crates.
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# #2621 (agaric-sync inversion): async methods on the `ApplyHost` trait object
# (`src/apply_host.rs`) that the sync layer holds instead of the concrete
# `Materializer`. Standard async-fn-in-dyn-trait shim.
async-trait = "0.1"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
# `thiserror` moved with `error.rs` into `agaric-core` (#2621); `agaric` no
# longer uses it directly. `similar` likewise moved with `word_diff.rs`.
ulid = "2.0.1"
# `uuid` moved with `device.rs` into `agaric-sync` (#2621, Sync-B); `agaric` no
# longer uses it directly.
blake3 = "1.8.5"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1", features = ["sync", "macros", "rt", "net", "io-util", "io-std"] }
regex = "1"
aho-corasick = "1"
# `unicode-normalization` moved with `tag_norm` + `nfc_normalise` into
# `agaric-core` (#2621); `agaric` no longer uses it directly (the FTS/tag
# NFC boundary now calls `agaric_core::text_utils::nfc_normalise`).
base64 = "0.22.1"
# #695 — "chrono" lets `ActivityEntry.timestamp: DateTime<Utc>` derive
# `specta::Type` for the `get_mcp_recent_activity` command bindings.
specta = { version = "=2.0.0-rc.25", features = ["derive", "chrono"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
rustc-hash = "2.1.2"
# `parking_lot` moved with `loro/registry.rs` into `agaric-engine` (#2621, wave
# E1) — the `arc_lock` owned-guard sharding lives there now; the app crate no
# longer references it directly.
# `similar` moved with `word_diff.rs` into `agaric-core` (#2621).
zstd = "0.13"
ciborium = "0.2"
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# OpenTelemetry stack (issue #2110). The `opentelemetry`, `opentelemetry_sdk`,
# `opentelemetry-otlp`, and `opentelemetry-appender-tracing` crates moved with
# the `observability` module into the `agaric-observability` leaf crate (#2878)
# — nothing outside that module referenced them, so they left the app crate's
# direct dependency list entirely. What stays here is `tracing-opentelemetry`
# (the `OpenTelemetrySpanExt` trait the lib.rs invoke wrapper uses to attach the
# frontend's extracted trace context as the parent span) — it pins
# opentelemetry 0.32 + opentelemetry_sdk 0.32 transitively.
tracing-opentelemetry = "0.33"

# Sync — #2621 Sync-D: the peer-to-peer net/protocol/daemon/files/snapshot
# cluster moved into `agaric-sync`, taking its sync-only deps with it
# (`tokio-tungstenite`, `tokio-rustls`, `rcgen`, `mdns-sd`, `if-addrs`,
# `qrcode`, `x509-parser`). What remains here is used by app *production* code
# outside the sync cluster (or is a shared TLS/crypto dep): `rustls`,
# `futures-util`, `sha2`, `rand`. The four still referenced by the app's hosted
# sync *tests* (`tokio-tungstenite`, `rcgen`, `mdns-sd`, `x509-parser`) moved to
# `[dev-dependencies]`; `tokio-rustls` / `if-addrs` / `qrcode` had no remaining
# app use site and were dropped entirely.
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
sha2 = "0.11"
rand = "0.10"
tracing-appender = "0.2.4"
# Align `reqwest 0.13` to the repo's rustls-everywhere
# posture (same TLS stack as `tokio-tungstenite` / `tokio-rustls` / sqlx on
# rustls).  `rustls` in reqwest 0.13 pulls `rustls-platform-verifier` which
# uses the OS's native trust roots (matches the `rustls-tls-native-roots`
# feature in `tokio-tungstenite`).  `json` is used by `gcal_push::api`;
# `http2` keeps parity with reqwest's default bundle minus native-tls.
# `default-features = false` prevents the `native-tls` transitive crate
# from being pulled via `system-proxy` / `charset` at link time.
# Note: reqwest 0.13's `default-tls = ["rustls"]` (it changed from 0.12
# which defaulted to native-tls), so disabling defaults and re-selecting
# `rustls` yields a single rustls stack — binary size drops by the
# `native-tls-crate` slice.
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "http2", "charset"] }
tauri-plugin-process = "2.3.1"

# `tauri-plugin-deep-link` enables OS-level URL routing for the
# `agaric://` scheme: `agaric://block/<ULID>` / `agaric://page/<ULID>` for
# external automation (terminal scripts, OS notifications, Spotlight),
# `agaric://settings/<tab>` for OS-level deep links into the Settings
# Panel (composes with `?settings=…` query param), and
# `agaric://oauth/callback` for the Custom-Tabs + PKCE + App-Link flow on
# Android (unblocker — Android sandboxes the loopback HTTP
# listener that desktop OAuth uses).  Cross-platform — required on
# desktop AND Android, so registration is NOT gated behind
# `#[cfg(desktop)]`.  Part of the Tauri plugin coupled stack per
# AGENTS.md §"Coupled Dependency Updates" — move in lockstep with the
# rest of the tauri-plugin-* crates.
tauri-plugin-deep-link = "2"
# `url` 2.x is already a transitive dep of every `tauri-plugin-*`
# crate that handles URLs (notably `tauri-plugin-deep-link`); declare it
# explicitly so `src-tauri/src/deeplink/mod.rs` can `use url::Url` to
# parse inbound `agaric://…` strings without depending on transitive
# resolution of an indirect dependency.
url = "2"
dirs = { version = "6.0.0", default-features = false }

# Official Rust MCP SDK — the canonical MCP transport/dispatch layer.
# Hard (non-optional) dependency as of the rmcp migration (#693): the
# `mcp_rmcp_spike` feature gate was retired and the hand-rolled framing
# deleted, so `RmcpAdapter` serves both surfaces unconditionally. Pinned
# to v1.7 (post-1.0, Apache-2.0). Defaults (`base64`, `macros`, `server`)
# include the `transport-async-rw` server transport via the `server`
# feature; the `client` feature is added so the end-to-end tests can
# drive a real rmcp client over an in-memory `tokio::io::duplex` pair.
rmcp = { version = "2.0", features = ["client"] }

# Phase 1 — Loro CRDT runtime. Hard dep as of Phase 3 day-9
# (the `loro-shadow` feature gate retired); the engine is the only
# materializer path.  Caret-1 mirrors what the (now-archived) spike
# crate pinned (see git tag `pend-09/spike-archive` for
# `crates/loro-spike/Cargo.toml`); the spike's format-stability finding
# (kill criterion #4) is the basis for the 1.x pin.  Not part of any
# coupled dep stack per AGENTS.md §"Coupled Dependency Updates".
loro = "1.12"

# `xxhash-rust` moved with `loro/engine/mod.rs` into `agaric-engine` (#2621,
# wave E1) — `peer_id_from_device_id`'s deterministic `xxh3_64` hash lives
# there now; the app crate no longer references it directly.

[dev-dependencies]
# Re-declare agaric-core with `test-util` so the moved `*::test_id` newtype
# constructors are available to this crate's ~510 test call sites (#2621).
# Only enabled for test builds; the normal `[dependencies]` entry stays lean.
agaric-core = { path = "agaric-core", version = "0.1.0", features = ["test-util"] }
# Re-declare agaric-engine with `test-util` so loro's `reproject_call_spy`
# counter is visible to the `materializer::handlers::import_scaling_tests`
# reprojection assertions (#2621, wave E1). Only enabled for test builds; the
# normal `[dependencies]` entry stays lean.
agaric-engine = { path = "agaric-engine", version = "0.1.0", features = ["test-util"] }
# #2621 Sync-D: re-declare agaric-sync with `test-util` so the app-hosted sync
# tests can reach the cross-crate test helpers gated behind that feature
# (`sync_net::test_connection_pair` + the `InnerStream::Test` machinery,
# `sync_events::RecordingEventSink`). Only enabled for test builds.
agaric-sync = { path = "agaric-sync", version = "0.1.0", features = ["test-util"] }
# #2621 Sync-D: these sync-only crates moved to `agaric-sync` for production;
# the only remaining app use sites are the hosted sync tests, so they are
# dev-only here (unified with agaric-sync's production copies by cargo).
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-native-roots"] }
rcgen = "0.14"
mdns-sd = "0.20"
x509-parser = "0.18.1"
criterion = { version = "0.8.2", features = ["async_tokio"] }
# The `opentelemetry_sdk` `testing` dev-dep (InMemory{Span,Log,Metric}Exporter)
# moved to `agaric-observability` with the pipeline tests it backed (#2878); no
# app-crate test outside that module used it.
insta = { version = "1.47.0", features = ["yaml", "redactions"] }
proptest = "1.11.0"
tempfile = "3.27.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "test-util"] }
# HTTP mocking for OAuth token endpoint tests.
wiremock = "0.6"

# #2621 Sync-D: the Android WiFi-multicast-lock JNI bridge
# (`sync_daemon/android_multicast.rs`) moved to `agaric-sync`, taking its
# Android-only `jni` / `ndk-context` deps with it. No app-crate code references
# them any longer, so the `[target.'cfg(target_os = "android")'.dependencies]`
# table was dropped here.

# Linux OS notifications are dispatched via notify-rust directly (see
# commands/notifier.rs): tauri-plugin-notification fires notify-rust's
# blocking show() on the tokio async runtime and discards the Result, which
# silently emits no D-Bus call on Linux. Same crate/version the plugin pulls.
[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

# Desktop-only Tauri plugins (#760).  Every registration is gated behind
# `#[cfg(desktop)]` / `#[cfg(not(mobile))]` in lib.rs (Tauri's `desktop`
# cfg = not(android | iOS), which is exactly this target expression), so
# the crates were dead weight + needless permission surface in the
# Android APK while they sat in the unconditional [dependencies] table.
# Their JS-facing permissions live in `capabilities/desktop.json`
# (platform-scoped to linux/macOS/windows) — keep the two in sync.
# All five are part of the Tauri plugin coupled stack per AGENTS.md
# §"Coupled Dependency Updates" — move in lockstep with the rest of the
# tauri-plugin-* crates.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Prevent two SQLite pools racing on the same DB if the user
# double-launches.  Android/iOS enforce single-instance via the OS task
# model.  MUST stay the first plugin registered in lib.rs.
tauri-plugin-single-instance = "2"
# Remember window size / position / monitor / maximized state
# across launches.  Android/iOS handle window state via the OS task
# lifecycle.
tauri-plugin-window-state = "2"
# Launch-on-login support. Settings → General → "Launch on
# login" toggle drives the plugin's `enable()` / `disable()` /
# `isEnabled()` IPC.  Plumbing per OS lives upstream (XDG autostart
# `.desktop` files on Linux, macOS `LaunchAgents`, Windows registry).
# Android/iOS handle "start at boot" via the OS task model (foreground
# service / background fetch entitlements).
tauri-plugin-autostart = "2"
# Desktop auto-update (minisign-signed bundles; see release.yml +
# tauri.conf.json).  Android updates flow through the Play Store /
# sideloaded APK, not Tauri's updater path.
tauri-plugin-updater = "2.10.0"
# Global hotkey for "quick capture" (drop a line into today's
# journal from anywhere).  Android / iOS have no global-shortcut
# concept (the `global-hotkey` crate doesn't compile there).
tauri-plugin-global-shortcut = "2"
# #2972 / #2919 — native, webview-independent error dialog shown at the two
# boot-fatal exit points in `lib.rs` (a failed Tauri build and a failed `setup`
# orchestration) before the process exits, so a downgrade / failed-update /
# corrupt-DB failure no longer exits silently with only a log line. We use the
# `gtk3` backend (not the default `xdg-portal`) because Tauri already links GTK
# on Linux at these exact `gtk-sys`/`glib-sys`/`gobject-sys` 0.18 versions, so
# this reuses them with no duplicate native deps and gives a natively-blocking
# `MessageDialog::show()`.  Desktop-only: `rfd` 0.17 has no Android/iOS backend
# (#3072); mobile surfaces boot-fatal errors via the platform + a log line.
rfd = { version = "0.17", default-features = false, features = ["gtk3"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false
# `panic = "abort"` shrinks the binary 5-10% (drops the
# unwind tables) and shaves a small amount of cold-start cost. Safe
# because Agaric does not rely on stack unwinding to recover from
# panics: Tauri IPC commands return `Result`, the daemon panic hook
# at lib.rs:447 just logs + lets the process terminate, and there
# are zero `std::panic::catch_unwind` call-sites in `src-tauri/src/`
# (verified during R24 landing — re-run `grep -r catch_unwind
# src-tauri/src/` before tightening this further). `lto = "fat"`
# was considered and rejected (2-5 min added to every release build
# per platform; not worth it on a 5-10% binary-size delta).
panic = "abort"

# Dev-build link-time trim (PEND-37, local dev speed). The link step is the
# long pole of incremental compiles on this graph (see docs/BUILD.md §"Speed
# up Rust builds" — 200K LOC + the Tauri/sqlx/Loro/OTel/rustls/reqwest tree);
# the default dev profile emits full `debug = 2` debuginfo for EVERY crate,
# most of which is dependency code we never step into. Dropping debuginfo for
# third-party crates only shrinks what the linker (mold, when active) has to
# process, cutting cold + incremental link time, while our own crate keeps
# full `debug = 2` (this override applies to dependencies, not the workspace
# members). Complementary to mold, not a replacement. First-party
# debuggability (breakpoints, variable inspection, backtraces in agaric_lib /
# the bins) is unchanged. Reversible with zero runtime effect — dev profile
# never ships.
[profile.dev.package."*"]
debug = false

# Dev-build link-time trim, part 2 (companion to the dep-debuginfo override
# above and the mold/lld linker auto-wired by scripts/setup.sh). Default Linux
# `split-debuginfo` packs DWARF into the linked artifact; `"unpacked"` leaves it
# in the per-object `.o`/`.dwo` files instead, so the linker copies far fewer
# bytes into the output — cutting cold + incremental *link* time (the long pole
# on this graph, per docs/BUILD.md § "Speed up Rust builds"). First-party
# debuggability and runtime are unchanged (the debuginfo still exists, just
# beside the binary); the dev profile never ships. Reversible with zero effect.
[profile.dev]
split-debuginfo = "unpacked"

[lib]
name = "agaric_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Benches (#2879): the 30 former single-`criterion_main!` bench crates were
# consolidated into a handful of THEMED bench binaries to cut Rust build/link
# time — each `[[bench]]` was a separate crate linking `agaric_lib` + criterion,
# multiplying link work under `cargo bench` and pre-push `--all-targets` clippy.
# Each former bench file now lives verbatim in `benches/groups/<name>.rs` and is
# pulled into its themed wrapper as a `#[path] mod`; every criterion
# `benchmark_group`/`bench_function` id string is UNCHANGED, so historical
# baselines in the shared `target/criterion/` tree (keyed by id, not by binary)
# keep resolving. The CI deep-check shard job enumerates these `[[bench]]` names
# dynamically (`grep -A1 '^[[bench]]' | grep -vx interactive_slo`), so the
# smaller list simply shards fewer, larger targets — coverage is preserved
# because each themed binary's `--test` smoke run exercises every group it owns.
#
# `interactive_slo` and `loro_vs_sql_reads` stay STANDALONE: interactive_slo is
# invoked by name for the SLO perf gate and must not change; loro_vs_sql_reads
# is a hand-rolled `fn main()` harness (not criterion) that can't fold into a
# `criterion_main!`.

# engine / apply / history / undo-redo / op-log / snapshot / compaction:
# engine_checkpoint_bench, undo_redo, history_bench, snapshot_bench,
# compaction_bench, op_log_bench, soft_delete_bench.
[[bench]]
name = "engine_bench"
harness = false

# read / query / index: backlink_query_bench, tag_query_bench, pagination_bench,
# graph_bench, fts_bench, property_bench, property_def_bench, alias_bench.
[[bench]]
name = "query_bench"
harness = false

# agenda / scheduled-item: agenda_bench, agenda_expansion_bench.
[[bench]]
name = "agenda_bench"
harness = false

# import / export / attachment / draft I/O: import_bench, export_bench,
# attachment_bench, draft_bench.
[[bench]]
name = "io_bench"
harness = false

# core commands / cache / cold-start / resource / move-reorder / hash /
# page-load: commands_bench, cache_bench, cold_start_bench,
# resource_envelope_bench, move_reorder_bench, hash_bench, page_load_bench.
[[bench]]
name = "core_bench"
harness = false

# Phase 1 of `pending/scale-benchmarks-100k-2026-05-14.md` — latency-gate
# bench that re-runs every interactive Tauri command at the 100K-scale
# fixture and `panic!`s if any sample's mean elapsed exceeds the
# per-command budget (sourced from ARCHITECTURE.md §25). Intended to be
# run once in CI; the two §25 *Problem* commands (`list_page_links`,
# `list_projected_agenda`) are gated behind `SLO_INCLUDE_PROBLEM=1`
# until their fix plans land. MUST stay its own binary (CI invokes it by name
# and greps its `interactive_slo:` output for the SLO gate).
[[bench]]
name = "interactive_slo"
harness = false

# Phase 0 day-10 — paired SQL read benchmark mirroring the
# (now-archived) spike's `read_path_bench` (day-7); see git tag
# `pend-09/spike-archive` for the original source.  Throwaway in
# spirit; lives only until the spike's open question 8 is closed
# (see `docs/session-log/2026-sessions-401-800.md` Session 698 + `git tag pend-09/spike-archive`).
# Hand-rolled `fn main()` harness (not criterion) — stays standalone.
[[bench]]
name = "loro_vs_sql_reads"
harness = false

# Stdio ↔ MCP socket bridge binary shipped alongside the Tauri app.
# The main Tauri binary is `src/main.rs` (auto-detected); this extra bin is
# a small standalone forwarder that MCP clients spawn as a stdio subprocess.
[[bin]]
name = "agaric-mcp"
path = "src/bin/agaric-mcp.rs"

# #645 — the `audit_cross_space_refs` and `op_log_histogram` diagnostic
# bins were carved out of this crate into the `agaric-diagnostics`
# workspace member (`diagnostics/`). Moving them out of the app crate's
# `[[bin]]` scan was the session-738 NOTE's "proper resolution": a
# feature-gated bin can't be skipped because `tauri-bundler` scans every
# `[[bin]]` entry regardless of `required-features`, so the bins now live
# outside this manifest entirely. Run them with
# `cargo run -p agaric-diagnostics --bin <name>`.

# Phase 3 day-10 — `parity_report` bin deleted alongside the
# `merge_parity_log` table (migration `0057`).  The bin's reason for
# existing was the diffy-vs-Loro parity histogram during the Phase-2
# soak; with diffy gone the comparison surface no longer exists, the
# table got dropped, and the bin's queries would all be against a
# missing table.  Re-introduce from git history if a future sync
# audit ever needs an analogous tool.
