# agaric-core — foundation crate for the layered-workspace split (#2621).
#
# Wave 1 holds the genuinely pure-leaf modules carved out of the `agaric`
# app crate: `error` (the `AppError` root, referenced by ~142 files),
# `word_diff`, `sql_utils`, and `text_utils`. None of them reach into any
# other app module — they depend only on std + a handful of external
# crates — so this is the natural bottom of the dependency DAG.
#
# The `agaric` crate depends on this via a path dep and re-exports each
# module (`pub use agaric_core::error;` …) so existing `crate::error::…`
# paths keep resolving unchanged during the transition.
[package]
name = "agaric-core"
version = "0.1.0"
edition = "2024"
# Keep in lockstep with ../Cargo.toml (the app crate) + rust-toolchain.toml.
rust-version = "1.95.0"
license = "GPL-3.0-or-later"
publish = false

[features]
# Exposes the `*::test_id` newtype constructors (otherwise `#[cfg(test)]`-only)
# to *other* crates' test builds — `agaric`'s ~510 test call sites reach them
# via this feature, enabled from `agaric`'s `[dev-dependencies]`. Not enabled
# in normal builds, so the helpers stay out of the production API. (#2621)
test-util = []

[dependencies]
# Versions/features mirror the app crate's `[dependencies]` exactly so
# cargo's feature unification keeps a single build of each crate across
# the workspace (no dependency-graph split).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
# `error.rs` references `sqlx::Error` + `sqlx::migrate::MigrateError`; the
# `ulid` newtypes use `#[derive(sqlx::Type)]` + `#[sqlx(transparent)]`, which
# need the `macros` feature (the DERIVE macros). Note: there are still NO
# `query!`/`query_as!` macros here, so agaric-core has NO `.sqlx/` offline
# cache and needs NO `sqlx prepare` CI lane — those are for compile-checked
# queries, which stay up in the `agaric`/store layer (`verify_active_in_tx`).
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
specta = { version = "=2.0.0-rc.25", features = ["derive", "chrono"] }
similar = "3"
# `tag_norm` (Unicode case-folding) + `text_utils::nfc_normalise` (the shared
# NFC boundary helper). Version pinned to match ../Cargo.toml.
unicode-normalization = "0.1.25"
# `hash` — blake3 op-log hashing + `#[tracing::instrument]` spans. Pinned to
# match ../Cargo.toml.
blake3 = "1.8.5"
tracing = { version = "0.1.44", features = ["attributes"] }
# `ulid` newtypes — ULID generation/parsing for `BlockId::new`/`from_str`.
ulid = "1.2.1"
# `time::now_rfc3339` — RFC-3339 wall-clock timestamp formatting. Version +
# features pinned to match ../Cargo.toml for feature unification.
chrono = { version = "0.4.44", features = ["serde"] }

[dev-dependencies]
# Needed by the moved unit tests: `error.rs` uses `#[tokio::test]`,
# `word_diff.rs` uses `proptest!`. Versions/features mirror ../Cargo.toml.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "test-util"] }
proptest = "1.11.0"

# Mirror the app crate's lint posture so clippy/rustc behave identically
# under CI (the app crate declares these as package-level tables, not
# `[workspace.lints]`, so we replicate them here — same pattern as the
# `agaric-diagnostics` member).
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
fallible_impl_from = "deny"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
large_futures = "warn"
default_trait_access = "warn"
