# agaric-engine — CRDT / document-domain layer for the layered-workspace split
# (#2621).
#
# Wave E0 establishes the crate with the query-free leaf `bibliography` module
# (a pure BibTeX / CSL-JSON import parser — no sqlx, no IO; depends only on
# `agaric-core`'s `error` module + serde_json). Later waves fold in the Loro
# CRDT runtime + the `dag` materializer. Query-free for now, so the crate stands
# up NO `.sqlx` offline cache yet — that lands when the DB-touching engine
# modules move. The `agaric` crate depends on this via a version-pinned path dep
# and re-exports each module (`pub use agaric_engine::bibliography;` …) so
# existing `crate::bibliography::…` paths keep resolving unchanged during the
# transition.
[package]
name = "agaric-engine"
version = "0.1.0"
edition = "2024"
# Keep in lockstep with ../Cargo.toml (the app crate) + rust-toolchain.toml.
rust-version = "1.95.0"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
# Versions/features mirror the app crate's `[dependencies]` so cargo's feature
# unification keeps a single build of each crate across the workspace.
# `agaric-core` — `bibliography` references `error::AppError`. Path dep pinned
# with a version (cargo-deny wildcard ban).
agaric-core = { path = "../agaric-core", version = "0.1.0" }
# `bibliography` parses the CSL-JSON format via `serde_json::Value`.
serde_json = "1"

# Mirror the app crate's lint posture so clippy/rustc behave identically under
# CI (same pattern as the `agaric-core` / `agaric-store` members).
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
fallible_impl_from = "deny"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
large_futures = "warn"
default_trait_access = "warn"
